[package]
name = "comparator"
version = "0.2.1"
authors = ["Konrad Borowski <konrad@borowski.pw>"]
description = "A Java-like Comparator type"
license = "MIT/Apache-2.0"
repository = "https://gitlab.com/KonradBorowski/comparator"
readme = "README.md"
keywords = ["data-structure", "no_std"]
categories = ["algorithms", "data-structures", "no-std", "rust-patterns"]

[features]
default = ["std"]
std = []
